--- a/app/views/space.xml
+++ b/app/views/space.xml
@@ -4,12 +4,16 @@
 		<!-- <ImageView id="bb_containerBackground" /> -->
 		<View id="titleView" top="80">
 			<ImageView class="tripleISS" image="/images/triple.png" opacity="0.06">
-			<Label id="winTitle">T-10 in SPACE</Label>
+			<Label id="winTitle">T-10 SPACE</Label>
 		</View>
 		<View onClick="addEvent" class="bigButton" id="addEvent">
-			<Label class="largeText">Add Event</Label>
+			<Label class="largeText">Add Location</Label>
 		</View>
 		
+		<View onClick="listEvents" class="bigButton" id="listEvent">
+			<Label class="largeText">List Events</Label>
+		</View>
+
 	</Window>
 
 	<Window id="space" platform="ios" formFactor="handheld">
