--- a/app/widgets/to.t10.listLocations/views/listItem.xml
+++ b/app/widgets/to.t10.listLocations/views/listItem.xml
@@ -2,7 +2,9 @@
 		<View id="listItem">
 			<View id="backgroundView" />
 			<Label id="locationData"></Label>
-			<Button id="editBtn" zIndex="3" class="locationButtons"  visible="false">Edit</Button>
+		<!-- 	<Button id="editBtn" zIndex="3" class="locationButtons"  visible="false">Edit</Button> -->
+			<Button id="notifyBtn" zIndex="3" class="locationButtons" visible="false">Notify</Button>
+
 			<Button id="deleteBtn" zIndex="3" class="locationButtons" visible="false">Delete</Button>
 			<ImageView id="todIcon" left="180" />
 		</View>
